--- a/book/Rc.html
+++ b/book/Rc.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>智能指针 - cs_learn</title>
+        <title>Rc - cs_learn</title>
 
 
         <!-- Custom HTML head -->
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html"><strong aria-hidden="true">1.</strong> cs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="第2章.html"><strong aria-hidden="true">1.1.1.</strong> 第2章</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item expanded "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li><li class="chapter-item expanded "><a href="智能指针.html" class="active"><strong aria-hidden="true">2.3.</strong> 智能指针</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Box.html"><strong aria-hidden="true">2.3.1.</strong> Box</a></li><li class="chapter-item expanded "><a href="Rc.html"><strong aria-hidden="true">2.3.2.</strong> Rc</a></li><li class="chapter-item expanded "><a href="RefCell.html"><strong aria-hidden="true">2.3.3.</strong> RefCell</a></li><li class="chapter-item expanded "><a href="循环引用.html"><strong aria-hidden="true">2.3.4.</strong> 循环引用</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html"><strong aria-hidden="true">1.</strong> cs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="第2章.html"><strong aria-hidden="true">1.1.1.</strong> 第2章</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item expanded "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li><li class="chapter-item expanded "><a href="智能指针.html"><strong aria-hidden="true">2.3.</strong> 智能指针</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Box.html"><strong aria-hidden="true">2.3.1.</strong> Box</a></li><li class="chapter-item expanded "><a href="Rc.html" class="active"><strong aria-hidden="true">2.3.2.</strong> Rc</a></li><li class="chapter-item expanded "><a href="RefCell.html"><strong aria-hidden="true">2.3.3.</strong> RefCell</a></li><li class="chapter-item expanded "><a href="循环引用.html"><strong aria-hidden="true">2.3.4.</strong> 循环引用</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,30 +144,68 @@
 
                 <div id="content" class="content">
                     <main>
-                        <ul>
-<li>
-<p><a href="./Box.html">Box<T></a></p>
-</li>
-<li>
-<p><a href="./Rc.html">Rc<T></a></p>
-</li>
-<li>
-<p><a href="./RefCell.html">RefCell<T></a></p>
-</li>
-<li>
-<p><a href="./%E5%BE%AA%E7%8E%AF%E5%BC%95%E7%94%A8.html">循环引用</a></p>
-</li>
-</ul>
+                        <blockquote>
+<p>支持多重所有权：<code>Rc&lt;T&gt;</code></p>
+</blockquote>
+<p><code>Rc&lt;T&gt;</code>会在内部维护一个用于记录值引用次数的计数器,从而确定这个值是否在被引用.（则是个强引用），只有在引用次数为0时,这个值才会被<strong>安全地释放.</strong></p>
+<p>考虑下面这种情况:</p>
+<pre><pre class="playground"><code class="language-rust edition2021">fn main() {
+    let a=Cons(5,Box::new(Cons(2,Box::new(Nil))));
+    let b=Cons(3, Box::new(a));
+    let c=Cons(10, Box::new(a));
+}
+
+
+use crate::List::{Cons,Nil};
+enum List {
+    Cons(i32,Box&lt;List&gt;),
+    Nil,
+}
+</code></pre></pre>
+<p>链表<code>b</code>和<code>c</code>共享了<code>a</code>链表,编译时会报错:</p>
+<pre><code class="language-shell"> --&gt; src\main.rs:4:9
+  |
+4 |     let c=Cons(10, Box::new(a));
+  |         - move occurs because `a` has type `List`, which does not implement the `Copy` trait
+3 |     let b=Cons(3, Box::new(a));
+  |                            - value moved here
+4 |     let c=Cons(10, Box::new(a));
+  |  
+</code></pre>
+<blockquote>
+<p>因为在b声明后，b持有了a的所有权.此后再尝试声明c并且让c也持有a的所有权,这时的a所有权不在a上,而是在b上。</p>
+</blockquote>
+<p>使用<code>Rc::clone</code>来声明b:</p>
+<blockquote>
+<p><code>Rc::clone()</code>不是深度拷贝,只是浅度拷贝,即只增加堆上对应数据的引用次数.</p>
+</blockquote>
+<pre><pre class="playground"><code class="language-rust edition2021">use std::rc::Rc;
+fn main() {
+    let a=Rc::new(Cons(5,Rc::new(Cons(2,Rc::new(Nil)))));
+    let b=Cons(3, Rc::clone(&amp;a));
+    let c=Cons(10, Rc::clone(&amp;a));
+    println!(&quot;b is {:?}&quot;,b);
+    println!(&quot;c is {:?}&quot;,c);
+}
+
+
+use crate::List::{Cons,Nil};
+#[derive(Debug)]
+enum List {
+    Cons(i32,Rc&lt;List&gt;),
+    Nil,
+}
+</code></pre></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="rust_linkedlist.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="Box.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="Box.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="RefCell.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -177,11 +215,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="rust_linkedlist.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="Box.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="Box.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="RefCell.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
