--- a/book/2.信息的表示和处理.html
+++ b/book/2.信息的表示和处理.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>第2章 - cs_learn</title>
+        <title>2.信息的表示和处理 - cs_learn</title>
 
 
         <!-- Custom HTML head -->
@@ -30,6 +30,8 @@
 
         <!-- Custom theme stylesheets -->
 
+        <!-- MathJax -->
+        <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </head>
     <body>
     <div id="body-container">
@@ -83,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html"><strong aria-hidden="true">1.</strong> cs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="第2章.html" class="active"><strong aria-hidden="true">1.1.1.</strong> 第2章</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item expanded "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li><li class="chapter-item expanded "><a href="智能指针.html"><strong aria-hidden="true">2.3.</strong> 智能指针</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Box.html"><strong aria-hidden="true">2.3.1.</strong> Box</a></li><li class="chapter-item expanded "><a href="Rc.html"><strong aria-hidden="true">2.3.2.</strong> Rc</a></li><li class="chapter-item expanded "><a href="RefCell.html"><strong aria-hidden="true">2.3.3.</strong> RefCell</a></li><li class="chapter-item expanded "><a href="循环引用.html"><strong aria-hidden="true">2.3.4.</strong> 循环引用</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="linux.html"><strong aria-hidden="true">3.</strong> Linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="命令.html"><strong aria-hidden="true">3.1.</strong> 命令</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="cs.html"><strong aria-hidden="true">1.</strong> cs</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="csapp.html"><strong aria-hidden="true">1.1.</strong> csapp</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2.信息的表示和处理.html" class="active"><strong aria-hidden="true">1.1.1.</strong> 2.信息的表示和处理</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="rust_index.html"><strong aria-hidden="true">2.</strong> rust_learning</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="rust_Fn.html"><strong aria-hidden="true">2.1.</strong> Fn</a></li><li class="chapter-item expanded "><a href="rust_linkedlist.html"><strong aria-hidden="true">2.2.</strong> 模拟链表</a></li><li class="chapter-item expanded "><a href="智能指针.html"><strong aria-hidden="true">2.3.</strong> 智能指针</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Box.html"><strong aria-hidden="true">2.3.1.</strong> Box</a></li><li class="chapter-item expanded "><a href="Rc.html"><strong aria-hidden="true">2.3.2.</strong> Rc</a></li><li class="chapter-item expanded "><a href="RefCell.html"><strong aria-hidden="true">2.3.3.</strong> RefCell</a></li><li class="chapter-item expanded "><a href="循环引用.html"><strong aria-hidden="true">2.3.4.</strong> 循环引用</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="linux.html"><strong aria-hidden="true">3.</strong> Linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="命令.html"><strong aria-hidden="true">3.1.</strong> 命令</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -193,6 +195,41 @@
 <blockquote>
 <p>移位运算的优先级比<code>+ -</code>运算低</p>
 </blockquote>
+<h2 id="整数表示"><a class="header" href="#整数表示">整数表示</a></h2>
+<ul>
+<li>
+<p>无符号数编码定义:\(B2U_w(\overline x)=\sum_{i=0}^{w-1}x_i2^i\)</p>
+</li>
+<li>
+<p>补码编码定义:把无符号数的最高位变成符号位:即最高位的符号是<code>-</code>,其余位不变</p>
+</li>
+</ul>
+<p>处理同样字长的有符号数和无符号数之间的转换:数值可能改变，但位模式不变.</p>
+<h3 id="补码与无符号数的转换"><a class="header" href="#补码与无符号数的转换">补码与无符号数的转换:</a></h3>
+<ul>
+<li>
+<p>T2U</p>
+<p><img src="https://raw.githubusercontent.com/Jiewyjson/P/main/md/v1/202304251748098.png" alt="image-20230425174840570" /></p>
+</li>
+<li>
+<p>U2T</p>
+<p><img src="https://raw.githubusercontent.com/Jiewyjson/P/main/md/v1/202304251749508.png" alt="image-20230425174913777" /></p>
+<blockquote>
+<p>一个运算中,如果一个运算数是有符号的，另一个数无符号的，<code>c</code>会隐式将无符号数转为有符号数，并且假设两个数都是非负的.</p>
+</blockquote>
+</li>
+</ul>
+<h3 id="扩展位表示"><a class="header" href="#扩展位表示">扩展位表示</a></h3>
+<ul>
+<li>无符号数的零扩展</li>
+<li>补码数的符号扩展</li>
+</ul>
+<h3 id="截断"><a class="header" href="#截断">截断</a></h3>
+<ul>
+<li>无符号数的截断</li>
+<li>补码数的截断</li>
+</ul>
+<h3 id="运算"><a class="header" href="#运算">运算</a></h3>
 
                     </main>
 
