--- a/book/rust_linkedlist.html
+++ b/book/rust_linkedlist.html
@@ -480,6 +480,11 @@ impl&lt;'a, T&gt; Iterator for IterMut&lt;'a, T&gt; {
             window.playground_copyable = true;
         </script>
 
+        <script src="ace.js"></script>
+        <script src="editor.js"></script>
+        <script src="mode-rust.js"></script>
+        <script src="theme-dawn.js"></script>
+        <script src="theme-tomorrow_night.js"></script>
 
         <script src="elasticlunr.min.js"></script>
         <script src="mark.min.js"></script>
